--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>algafood-api</name>
 	<description>Projeto do treinamento ESR</description>
+	
 	<properties>
 		<java.version>17</java.version>
+		<modelmapper.version>3.1.0</modelmapper.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -73,6 +76,11 @@
 		    <groupId>io.rest-assured</groupId> 
 		    <artifactId>rest-assured</artifactId> 
 		    <scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
 		</dependency>
 	</dependencies>
 
