--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>17</java.version>
 		<modelmapper.version>3.1.0</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
+		<jasperreports.version>6.20.1</jasperreports.version>
 	</properties>
 	
 	<dependencies>
@@ -69,7 +70,7 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
-		<dependency> 
+		<dependency>
 		    <groupId>org.springframework.boot</groupId> 
 		    <artifactId>spring-boot-starter-validation</artifactId> 
 		</dependency>
@@ -87,6 +88,16 @@
 		    <groupId>com.github.bohnman</groupId>
 		    <artifactId>squiggly-filter-jackson</artifactId>
 		    <version>${squiggly.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>${jasperreports.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-functions</artifactId>
+		    <version>${jasperreports.version}</version>
 		</dependency>
 	</dependencies>
 
