--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+algafood.storage.tipo=local
+
 algafood.storage.local.diretorio-fotos=E:\\Area\\Catalogos
 
 #algafood.storage.s3.id-chave-acesso=
