Configurando o projeto para envio de e-mails usando servidor SMTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=admin11
 
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update
-
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
-
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
@@ -23,13 +17,11 @@ algafood.storage.tipo=local
 
 algafood.storage.local.diretorio-fotos=E:\\Area\\Catalogos
 
-#algafood.storage.s3.id-chave-acesso=
-#algafood.storage.s3.chave-acesso-secreta=
 algafood.storage.s3.bucket=algafood-gust
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
 
-#spring.servlet.multipart.max-file-size=20KB
-#spring.servlet.multipart.max-request-size=20MB
-
-#spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+#spring.mail.password=
