--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,9 +21,10 @@ algafood.storage.s3.bucket=algafood-gust
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
 
+# Email
+
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
-
-algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+algafood.email.remetente=AlgaFood <gabrielkrac@gmail.com>
