Formatando valores monetários com FTL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,18 +13,23 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+
+# Storage
 algafood.storage.tipo=local
-
 algafood.storage.local.diretorio-fotos=E:\\Area\\Catalogos
-
+#algafood.storage.s3.id-chave-acesso=
+#algafood.storage.s3.chave-acesso-secreta=
 algafood.storage.s3.bucket=algafood-gust
 algafood.storage.s3.regiao=us-east-2
 algafood.storage.s3.diretorio-fotos=catalogo
 
-# Email
 
+# Email
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
 algafood.email.remetente=AlgaFood <gabrielkrac@gmail.com>
+
+
+spring.freemarker.settings.locale=pt_BR
