Implementando desafios de envio de email fake e sandbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,6 @@ spring.mail.username=apikey
 #spring.mail.password=
 algafood.email.remetente=AlgaFood <gabrielkrac@gmail.com>
 
-
 spring.freemarker.settings.locale=pt_BR
+algafood.email.impl=sandbox
+algafood.email.sandbox.destinatario=teste@algafood.com.br
