Observando e reagindo a Domain Events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,5 @@ spring.mail.username=apikey
 algafood.email.remetente=AlgaFood <gabrielkrac@gmail.com>
 
 spring.freemarker.settings.locale=pt_BR
-algafood.email.impl=sandbox
+algafood.email.impl=fake
 algafood.email.sandbox.destinatario=teste@algafood.com.br
