Gerando a definição OpenAPI em JSON com SpringFox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ algafood.email.remetente=AlgaFood <gabrielkrac@gmail.com>
 spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=teste@algafood.com.br
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
