--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<squiggly.version>1.3.18</squiggly.version>
 		<jasperreports.version>6.20.1</jasperreports.version>
 		<aws-java-sdk-s3.version>1.12.442</aws-java-sdk-s3.version>
+		<springfox.version>3.0.0</springfox.version>
 	</properties>
 	
 	<dependencies>
@@ -112,6 +113,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-boot-starter</artifactId>
+		    <version>${springfox.version}</version>
 		</dependency>
 	</dependencies>
 
